<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:layout_gravity="center_horizontal|center_vertical"
	android:id="@+id/newmap_view"
	android:background="@color/solid_black"
	>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" 
		android:layout_width="match_parent"
		android:layout_height="44dip" 
		android:background="@drawable/blackbar_glossy">
		
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:layout_centerInParent="true"
			android:text="@string/newmap_topbar_text" 
			android:textStyle="bold" 
			android:gravity="center" 
			android:textColor="@color/solid_white"
			android:textSize="@dimen/font_size_for_header_text" /> 
			
		<Button android:layout_width="wrap_content" 
  			android:layout_height="44dip" 
  			android:id="@+id/save_map_button" 
  			android:text="@string/newmap_save_map_button_text"
  			android:layout_alignParentRight="true"
  			android:gravity="center"
  			android:layout_marginTop="2dip" />
	</RelativeLayout>
	
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:background="@color/solid_white"
		android:layout_marginBottom="2dip"
		>
		<EditText android:id="@+id/map_name" 
			android:layout_width="match_parent" 
			android:layout_marginLeft="5dip"
			android:layout_marginTop="10dip"
			android:layout_height="44dip" 
			android:singleLine="true"
			android:hint="@string/newmap_hint_mapname" />
				
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:background="@color/solid_white"
			android:layout_below="@id/map_name"
			android:id="@+id/pick_map_choices"
			>
				
			<TextView android:layout_width="100dip"
				android:layout_height="wrap_content" 
				android:text="@string/newmap_pick_image_label_text"
				android:id="@+id/pick_image_label"
				android:layout_marginLeft="5dip"
				android:layout_marginTop="10dip"
				android:textColor="@color/solid_black" />
				
			<Button android:layout_width="100dip" 
	  			android:layout_height="44dip" 
	  			android:id="@+id/pick_image_url_button" 
	  			android:text="@string/newmap_pick_image_url_button_text" 
	  			android:gravity="center"
	  			android:layout_toRightOf="@id/pick_image_label" />
	  			
	  		<Button android:layout_width="100dip" 
	  			android:layout_height="44dip" 
	  			android:id="@+id/pick_image_phone_button" 
	  			android:text="@string/newmap_pick_image_phone_button_text" 
	  			android:gravity="center"
	  			android:layout_toRightOf="@id/pick_image_url_button" 
	  			android:layout_alignParentRight="true" />
	  	</RelativeLayout>
			
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:background="@color/solid_white"
			android:id="@+id/pick_map_url_choice"
			android:layout_below="@id/pick_map_choices" >
			
			<EditText android:id="@+id/map_url" 
				android:layout_width="match_parent" 
				android:layout_height="wrap_content"  
				android:singleLine="true"
				android:layout_marginLeft="5dip"
				android:layout_marginRight="1dip"
				android:textSize="@dimen/font_size_for_url"
				android:hint="@string/newmap_hint_mapurl" 
				android:visibility="invisible"/>
	  	</RelativeLayout>
    	
    	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" 
			android:layout_width="match_parent"
			android:background="@color/solid_white"
			android:layout_below="@id/pick_map_url_choice" 
			android:layout_height="320dip"
			>
			<ImageView android:id="@+id/addmap_map" 
				android:layout_width="wrap_content" 
				android:layout_height="310dip" />
		</RelativeLayout> 
	</RelativeLayout>
</LinearLayout>