<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:id="@+id/map_view"
    android:background="@color/solid_white"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:id="@+id/map_topbar"
        android:background="@drawable/blackbar_glossy">
        <ImageView android:src="@drawable/redpin_logo_glossless" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:id="@+id/logo"
        	android:layout_marginLeft="5dip"
        	android:onClick="button_Mapview"
        	android:layout_marginTop="5dip" android:layout_alignParentLeft="true"/>
        	
	

</RelativeLayout><ImageView android:layout_below="@id/logo" android:scaleType="fitXY" android:layout_gravity="center" android:src="@drawable/redpin_logo" android:layout_margin="10dip" android:layout_height="75dip" android:layout_width="180dip" android:id="@+id/settings_view_logo"></ImageView><TableLayout android:layout_height="wrap_content" android:layout_below="@+id/map_topbar" android:layout_width="match_parent" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="20dip" android:paddingTop="20dip" android:id="@+id/settings_view_table"><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/TableLayout01" android:id="@+id/settings_view_table_row_credits" android:paddingBottom="10dip"><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/TableLayout01" android:text="@string/settings_view_credits" android:paddingRight="20dip" android:id="@+id/settings_view_credits_label"></TextView><TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:inputType="textMultiLine" android:text="@string/settings_view_credits_value" android:id="@+id/settings_view_credits_text"></TextView></TableRow><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/settings_view_table_row_copyright"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_view_copyright" android:paddingRight="20dip" android:id="@+id/settings_view_copyright_label"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_view_copyright_value" android:id="@+id/settings_view_copyright_text"></TextView>
</TableRow>

</TableLayout><LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingTop="20dip" android:paddingLeft="20dip" android:paddingRight="20dip" android:id="@+id/settings_view_buttons"><Button android:layout_width="match_parent" android:text="@string/settings_view_server_preferences" android:layout_height="44dip" android:onClick="button_ServerPreferences" android:id="@+id/settings_view_button_serverpreferences"></Button>
</LinearLayout>

	






</LinearLayout>
